secondfile/objects/Provider_Grouping__c.object
<CustomObject>
    <description>Stores details for VASA Region calculation based on lecName procured from VASA Response.</description>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optical</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_Region__c</fullName>
        <label>VASA Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lecName__c</fullName>
        <externalId>true</externalId>
        <label>lecName</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Provider Grouping</label>
    <listViews>
        <fullName>AireSprings</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>AIRE</value>
        </filters>
        <label>AIRE Springs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Interface_Type__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BLUEBIRDNETWORKS</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>BLUEBIRD NETWORKS</value>
        </filters>
        <label>BLUEBIRD NETWORKS</label>
    </listViews>
    <listViews>
        <fullName>CABLEVISIONLIGHTPATH</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CABLEVISION LIGHTPATH</value>
        </filters>
        <label>CABLEVISION LIGHTPATH</label>
    </listViews>
    <listViews>
        <fullName>CCFIBERLINK</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CC FIBERLINK</value>
        </filters>
        <label>CC FIBERLINK</label>
    </listViews>
    <listViews>
        <fullName>CCIBERLINK</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CC FIBERLINK</value>
        </filters>
        <label>CC FIBERLINK</label>
    </listViews>
    <listViews>
        <fullName>CENTURYLINK</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CENTURYLINK</value>
        </filters>
        <label>CENTURYLINK</label>
    </listViews>
    <listViews>
        <fullName>CINCINNATIBELL</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>CINCINNATI</value>
        </filters>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CBT</value>
        </filters>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>CB</value>
        </filters>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>CincinnatiBell</value>
        </filters>
        <filters>
            <field>Speed__c</field>
            <operation>equals</operation>
            <value>1000</value>
        </filters>
        <label>CINCINNATI BELL</label>
    </listViews>
    <listViews>
        <fullName>CONSOLIDATEDCOMMUNICATIONS</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>CONSOLIDATED COMMUNICATIONS</value>
        </filters>
        <label>CONSOLIDATED COMMUNICATIONS</label>
    </listViews>
    <listViews>
        <fullName>COSTREET</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>equals</operation>
            <value>COSTREET</value>
        </filters>
        <label>COSTREET</label>
    </listViews>
    <listViews>
        <fullName>COX</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>COX</value>
        </filters>
        <filters>
            <field>Speed__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>COX COMMUNICATIONS</label>
    </listViews>
    <listViews>
        <fullName>ELINETWORKS</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>ELI</value>
        </filters>
        <filters>
            <field>Speed__c</field>
            <operation>equals</operation>
            <value>600</value>
        </filters>
        <label>ELI NETWORKS</label>
    </listViews>
    <listViews>
        <fullName>EMBARQ</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>EMBARQ</value>
        </filters>
        <filters>
            <field>Speed__c</field>
            <operation>equals</operation>
            <value>1000</value>
        </filters>
        <label>EMBARQ</label>
    </listViews>
    <listViews>
        <fullName>ENVENTIS</fullName>
        <columns>NAME</columns>
        <columns>lecName__c</columns>
        <columns>Speed__c</columns>
        <columns>VASA_Region__c</columns>
        <columns>Interface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lecName__c</field>
            <operation>contains</operation>
            <value>ENVENTIS</value>
        </filters>
        <filters>
            <field>Speed__c</field>
            <operation>equals</operation>
            <value>1000</value>
        </filters>
        <label>ENVENTIS</label>
    </listViews>
    <nameField>
        <displayFormat>PG-{0000}</displayFormat>
        <label>Provider Grouping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>